# my-small-app-playground

gemini-csv-play/: .aiexclude  GEMINI.md  Makefile  README.md  app.py  pyproject.toml
http-redirect-plugin/: _build.sh  go.mod  go.work  readme.md
http-redirect-plugin/cmd/: main.go  plugin_load.go
http-redirect-plugin/data/: config.json
http-redirect-plugin/log-plugin/: go.mod  plugin.go
http-redirect-plugin/protocol/: go.mod  protocol.go
mini-lsm-practices/: readme.txt
my-go-p2p/: Makefile  go.mod  main.go  note.txt
my-go-p2p/internal/: appstate.go  broadcast.go  encode_decode.go  encode_decode_test.go  remote_node.go  remote_node_test.go  type.go  type_int_cmd.go  type_network.go  utils.go  utils_test.go
my-go-p2p/pkg/: broadcast.go  reception.go  reception_test.go  teminal.go
my-img-cat/: Cargo.toml
my-img-cat/src/: main.rs
my-key-vault/: .gitignore  Cargo.toml  README.md
my-key-vault/src/: lib.rs  main.rs
my-visual-code-gen/: NOTE.txt  README.md  index.html  package-lock.json  package.json
my-visual-code-gen/src/: App.tsx  index.css  utils.ts
my-visual-code-gen/src/components/: ColorCustomNode.tsx  FlowEditor.tsx  NoteCustomNode.tsx  PanelContextMenu.tsx  (+3 more)
tiny-reward-pool-go/: .gitignore  GEMINI.md  Makefile  README.md  bench.txt  diff.txt  go.mod  go.sum
tiny-reward-pool-go/_ai/: task_01.md  task_02.md  task_03.md  task_04.md  task_05.md  task_06.md  task_07.md  task_08.md  task_09.md  task_10.md  task_11.md  task_12.md  task_13.md  task_14.md  task_15.md  task_16.md
tiny-reward-pool-go/samples/: config.json  config.yaml
(+84 files in other folders)
