[package]
name = "my_key_vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.75"
bincode = "1.3.3"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = "1.0.189"
serde_derive = "1.0.189"
